k8s/k8s-performance/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: raillo-perf
  labels:
    app.kubernetes.io/name: raillo-performance
    app.kubernetes.io/part-of: raillo
