k8s/k8s-performance/ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raillo-performance-ingress
  namespace: raillo-perf
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: raillo-issuer
spec:
  tls:
    - hosts:
        - server.v1.raillo.store
      secretName: server-v1-raillo-store-tls
    - hosts:
        - server.v2.raillo.store
      secretName: server-v2-raillo-store-tls
  rules:
    - host: server.v1.raillo.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: raillo-v1-service
                port:
                  number: 80
    - host: server.v2.raillo.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: raillo-v2-service
                port:
                  number: 80
